// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`key > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6 styles_undefined_compound_1__1g4bp0q9"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_28__1do42ls22"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_default__1g4bp0q2 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6 styles_undefined_compound_3__1g4bp0qb"
      data-disabled="true"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_caption__1do42lsp style_undefined_compound_4__1do42ls1e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_strong__1g4bp0q3 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6 styles_undefined_compound_0__1g4bp0q8 styles_undefined_compound_1__1g4bp0q9 styles_undefined_compound_5__1g4bp0qd"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_30__1do42ls24"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders disabled strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_disabled_true__1g4bp0q1 styles_prominence_strong__1g4bp0q3 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6 styles_undefined_compound_2__1g4bp0qa styles_undefined_compound_3__1g4bp0qb styles_undefined_compound_4__1g4bp0qc"
      data-disabled="true"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_disabled_true__1do42ls1 style_prominence_strong__1do42ls5 style_sentiment_primary__1do42lsc style_variant_caption__1do42lsp style_undefined_compound_5__1do42ls1f"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6"
      data-prominence="default"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_primary__1do42lsc style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_40__1do42ls2e"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_default__1g4bp0q2 styles_sentiment_neutral__1g4bp0q4 styles_size_small__1g4bp0q7"
      data-prominence="default"
      data-sentiment="neutral"
      data-size="small"
    >
      <span
        class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_captionSmall__1do42lsq style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q3 styles_sentiment_neutral__1g4bp0q4 styles_size_medium__1g4bp0q6 styles_undefined_compound_0__1g4bp0q8"
      data-prominence="strong"
      data-sentiment="neutral"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_prominence_stronger__1do42ls6 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_2__1do42ls1c style_undefined_compound_66__1do42ls34"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;

exports[`key > renders strong primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <kbd
      class="styles__1g4bp0q0 styles_prominence_strong__1g4bp0q3 styles_sentiment_primary__1g4bp0q5 styles_size_medium__1g4bp0q6 styles_undefined_compound_2__1g4bp0qa"
      data-prominence="strong"
      data-sentiment="primary"
      data-size="medium"
    >
      <span
        class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_primary__1do42lsc style_variant_caption__1do42lsp style_undefined_compound_1__1do42ls1b style_undefined_compound_41__1do42ls2f"
      >
        A
      </span>
    </kbd>
  </div>
</DocumentFragment>
`;
